[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/themes/Pink.tres" type="Theme" id=1]
[ext_resource path="res://Pages/Main.gd" type="Script" id=2]
[ext_resource path="res://UI_Components/Plan.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/png/menu.png" type="Texture" id=4]
[ext_resource path="res://Assets/fonts/Crushed-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI_Components/Recent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/png/gear.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 0.277392, 1, 1 ),
"update": 0,
"values": [ Vector2( 1450, 0 ), Vector2( 1061, 0 ), Vector2( 1061, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu/menu2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 0.34151, 1 ),
"update": 0,
"values": [ Color( 0.784314, 0.0823529, 0.709804, 0 ), Color( 0.784314, 0.0823529, 0.709804, 0 ), Color( 0.784314, 0.0823529, 0.709804, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "prefs"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/prefs:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 2.14355 ),
"update": 0,
"values": [ 0.0, -55.0 ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Plan" parent="." instance=ExtResource( 3 )]
theme = null

[node name="Menu" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 389.0

[node name="menu2" type="ToolButton" parent="Menu"]
modulate = Color( 0.784314, 0.0823529, 0.709804, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -95.0
margin_bottom = 98.0
shortcut_in_tooltip = false
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="Menu"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "MENU"
align = 1

[node name="cont" type="VBoxContainer" parent="Menu"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -358.0
margin_right = 142.5
margin_bottom = 358.0

[node name="sep3" type="HSeparator" parent="Menu/cont"]
margin_right = 295.0
margin_bottom = 29.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 29

[node name="save2" type="Button" parent="Menu/cont"]
margin_top = 33.0
margin_right = 295.0
margin_bottom = 62.0
text = "SAVE"

[node name="sep1" type="HSeparator" parent="Menu/cont"]
margin_top = 66.0
margin_right = 295.0
margin_bottom = 70.0
custom_styles/separator = SubResource( 1 )

[node name="load" type="Button" parent="Menu/cont"]
margin_top = 74.0
margin_right = 295.0
margin_bottom = 103.0
text = "LOAD_FILE"

[node name="sep2" type="HSeparator" parent="Menu/cont"]
margin_top = 107.0
margin_right = 295.0
margin_bottom = 111.0
custom_styles/separator = SubResource( 1 )

[node name="new" type="Button" parent="Menu/cont"]
margin_top = 115.0
margin_right = 295.0
margin_bottom = 144.0
text = "NEW_FILE"

[node name="sep5" type="HSeparator" parent="Menu/cont"]
margin_top = 148.0
margin_right = 295.0
margin_bottom = 152.0
custom_styles/separator = SubResource( 1 )

[node name="recent" type="VBoxContainer" parent="Menu/cont"]
editor/display_folded = true
margin_top = 156.0
margin_right = 295.0
margin_bottom = 706.0
rect_min_size = Vector2( 285, 550 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/cont/recent"]
margin_right = 295.0
margin_bottom = 37.0
text = "RECENT_FILES"

[node name="Recent" parent="Menu/cont/recent" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 41.0
margin_right = 295.0
margin_bottom = 550.0

[node name="sep4" type="HSeparator" parent="Menu/cont"]
margin_top = 710.0
margin_right = 295.0
margin_bottom = 720.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="prefs" type="ToolButton" parent="Menu"]
modulate = Color( 0.784314, 0.0823529, 0.709804, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 50, 50 )
shortcut_in_tooltip = false
icon = ExtResource( 7 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/menu = SubResource( 5 )
anims/prefs = SubResource( 6 )

[node name="autosave" type="Timer" parent="."]
[connection signal="menu_click" from="Plan" to="." method="_on_Plan_menu_click"]
[connection signal="pressed" from="Menu/menu2" to="." method="_on_menu2_pressed"]
[connection signal="mouse_entered" from="Menu/prefs" to="." method="_on_prefs_mouse_entered"]
[connection signal="mouse_exited" from="Menu/prefs" to="." method="_on_prefs_mouse_exited"]
